src/objects/CustomRecipient__c.object
<CustomObject>
	<fields>
		<fullName>EnvelopeConfiguration__c</fullName>
		<label>DocuSign Envelope Configuration</label>
		<referenceTo>EnvelopeConfiguration__c</referenceTo>
		<relationshipLabel>Custom Recipients</relationshipLabel>
		<relationshipName>CustomRecipient</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>Type__c</fullName>
		<description>Type</description>
		<inlineHelpText>Type</inlineHelpText>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Signer</fullName>
					<default>true</default>
					<label>Needs to Sign</label>
				</value>
				<value>
					<fullName>InPersonSigner</fullName>
					<label>In Person Signer</label>
				</value>
				<value>
					<fullName>CarbonCopy</fullName>
					<label>Receives a Copy</label>
				</value>
				<value>
					<fullName>CertifiedDelivery</fullName>
					<label>Needs to View</label>
				</value>
				<value>
					<fullName>Agent</fullName>
					<label>Specify Recipients</label>
				</value>
				<value>
					<fullName>Editor</fullName>
					<label>Allow to Edit</label>
				</value>
				<value>
					<fullName>Intermediary</fullName>
					<label>Update Recipients</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>AccessCode__c</fullName>
		<description>Access Code</description>
		<inlineHelpText>Access Code</inlineHelpText>
		<label>Access Code</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Email__c</fullName>
		<label>Recipient Email</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Language__c</fullName>
		<label>Language</label>
		<length>10</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>FirstName__c</fullName>
		<label>First Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>LastName__c</fullName>
		<label>LastName</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>RoutingOrder__c</fullName>
		<defaultValue>1</defaultValue>
		<inlineHelpText>Routing Order</inlineHelpText>
		<label>Routing Order</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>SmsPhoneNumber__c</fullName>
		<label>SMS Phone Number</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Note__c</fullName>
		<description>Note</description>
		<label>Private Message</label>
		<length>1000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Role__c</fullName>
		<description>Role</description>
		<inlineHelpText>Role</inlineHelpText>
		<label>DocuSign Role</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>SigningGroupId__c</fullName>
		<inlineHelpText>Signing Group ID</inlineHelpText>
		<label>Signing Group ID</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>SigningGroupName__c</fullName>
		<label>Signing Group Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Relationship__c</fullName>
		<label>Contact Relationship</label>
		<length>99</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>HostEmail__c</fullName>
		<label>Host Email</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>HostName__c</fullName>
		<label>Host Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<label>DocuSign Custom Recipient</label>
	<nameField>
		<displayFormat>CBR-{000000}</displayFormat>
		<label>Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Custom Recipients</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>